# scarlet

./: Cargo.toml  TODO.md  design.md  draft_4004.md  draft_5000.md  spec.md  workspace.code-workspace
scarlet/: .gitignore  Cargo.toml  explanation.sr  out.txt  out2.txt  rustfmt.toml
scarlet/full/: full.sr  misc.sr  std.sr
scarlet/full/std/: basics.sr  logic.sr  theorems.sr
scarlet/mini/: basics.sr  mini.sr  misc.sr  root.rer  root.sr  theorems.sr
scarlet/mini/misc/: other.sr
scarlet/mini/std/: basics.sr  theorems.sr
scarlet/moderate/: misc.sr  moderate.sr  root.sr  std.sr
scarlet/moderate/root/: 3U.sr  Bit.sr  SELF.sr  TYPE.sr  other.sr
scarlet/moderate/std/: basics.sr  logic.sr  theorems.sr
scarlet/root/: $.rer  $.sr
scarlet/root/scarlet/: $.rer  core.rer
scarlet/src/: constructs.rs  definitions.rs  diagnostic.rs  entry.rs  environment.rs  file_tree.rs  item.rs  main.rs  nom_prelude.rs  parser.rs  resolvable.rs  rust_analyzer_actions.rs  scope.rs  stage1.rs  stage2.rs  tokens.rs  transform.rs  util.rs
scarlet/src/constructs/: assertion.rs  axiom.rs  axiom_of_equality.rs  base.rs  builtin_operation.rs  builtin_value.rs  decision.rs  equal.rs  if_then_else.rs  index.rs  is_populated_struct.rs  length.rs  matchh.rs  member.rs  recursion.rs  shown.rs  structt.rs  substitution.rs  unique.rs  variable.rs  with_dependencies.rs
scarlet/src/dbg/: mod.rs
scarlet/src/definitions/: builtin.rs  compound_type.rs  constructor.rs  hole.rs  identifier.rs  invalid.rs  member_access.rs  new_type.rs  new_value.rs  other.rs  parameter.rs  placeholder.rs  reference.rs  struct_literal.rs  substitution.rs  unresolved_substitution.rs  variable.rs
scarlet/src/environment/: def_equal.rs  dependencies.rs  discover_equality.rs  from.rs  matchh.rs  (+11 more)
scarlet/syntax_test/: root.sr
(+688 files in other folders)
