[package]
authors = ["Joshua Maros <60271685+joshua-maros@users.noreply.github.com>"]
edition = "2018"
name = "scarlet"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.64"
colored = "2.0.0"
debug-cell = {git = "https://github.com/joshua-maros/debug-cell"}
dyn-clone = "1.0.9"
indexmap = "1.7.0"
itertools = "0.10.1"
lazy_static = "1.4.0"
maplit = "1.0.2"
nom = "7.0.0"
num = "0.4.0"
owning_ref = "0.4.1"
paste = "1.0"
rand = "0.8.4"
regex = "1.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
typed-arena = "2.0.1"

[features]
no_axioms = []
trace_borrows = []

[profile.dev.package."*"]
opt-level = 3
